# elrond-todo-smartcontract

./: .gitignore  Cargo.toml  snippets.sh
debug/: Cargo.toml
debug/src/: main.rs
mandos/: addsecondtodo.scen.json  addsecondtodo.scn.json  addtodo.scen.json
src/: lib.rs  task.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
