[package]
name = "todo"
version = "0.0.1"
authors = [ "edoueda@gmail.com",]
edition = "2018"

[lib]
path = "src/lib.rs"

[features]
wasm-output-mode = [ "elrond-wasm-node",]

[dependencies.elrond-wasm]
version = "0.9.7"

[dependencies.elrond-wasm-derive]
version = "0.9.7"

[dependencies.elrond-wasm-node]
version = "0.9.7"
optional = true

[dev-dependencies.elrond-wasm-debug]
version = "0.9.7"
path = "../../elrond-wasm-debug"
